# hgom

./: .gitignore  .travis.yml  CHANGELOG.markdown  Gom.hs  README  README.markdown  Setup.hs  TODO  Tests.hs  hgom.cabal  stack.yaml
Gom/: Builtins.hs  Checker.hs  CodeGen.hs  Config.hs  Constants.hs  FileGen.hs  HGom.hs  Helpers.hs  Java.hs  OOMappingGen.hs  OOMappings.hs  Parser.hs  Pretty.hs  Random.hs  RenderCode.hs  Sig.hs  SymbolTable.hs  UnitTests.hs
Gom/CodeGen/: Abstract.hs  Builtins.hs  Common.hs  Constants.hs  Constructors.hs  GenMonad.hs  Helpers.hs  Mappings.hs  OOMappings.hs  Sorts.hs  Strategies.hs
Gom/CodeGen/Common/: Builtins.hs  Constants.hs  GenMonad.hs  Helpers.hs
Gom/Common/: Checker.hs  Config.hs  FileGen.hs  Parser.hs  Pretty.hs  Random.hs  Sig.hs  SymbolTable.hs
Gom/Common/CodeGen/: Builtins.hs  Constants.hs  GenMonad.hs  Helpers.hs
Gom/HGom/: CodeGen.hs  UnitTests.hs
Gom/HGom/CodeGen/: Abstract.hs  Constructors.hs  Mappings.hs  Sorts.hs  Strategies.hs
Gom/OOMappings/: CodeGen.hs
app/: Gom.hs
bench/: Makefile  bench.sh
devutil/: debughgom.hs  tostrlist.hs
examples/: simple.gom  test.gom
examples/oomapping_poc/: compileJBossEl.sh  compileOOMapping.sh  compileSimple.sh
examples/oomapping_poc/jboss_el/: EL.gom  TestEL.t
examples/oomapping_poc/oomapping/: .MainHand.t.swp  Module.java  OOMappingTest.java  OOMappingTest.t  Signature.gom
examples/oomapping_poc/oomapping/signature/: .ISignature.java.swp  ISignature.java  ISignature.java,v  signature.tom
examples/oomapping_poc/secpol/: compile  pack  sl.tom
examples/oomapping_poc/secpol/modpol/: Deny.java  Deny.t  NotApplicable.java  NotApplicable.t  Permit.java  Permit.t  Policy.java  Policy.t  Query.java  QueryError.java  QueryError.t  SequencePolicy.java  SequencePolicy.t  deny.tom  notApplicable.tom  permit.tom  query.tom  queryError.tom
examples/oomapping_poc/secpol/polrbac/: PolicyRBAC.java  PolicyRBAC.t  QueryCreateSession.java  QueryDeleteSession.t  queryCreateSession.tom  queryDeleteSession.tom  queryEndSession.tom  queryStartSession.tom
examples/oomapping_poc/secpol/poltemps/: PolTemps.java  PolTemps.t  QueryTemps.java  QueryTemps.t  queryTemps.tom
examples/oomapping_poc/simple/: Module.java  Signature.gom  Test.t
examples/oomapping_poc/simple/hand/types/: T.java  T1.java  T2.java
examples/oomapping_poc/simple/hand/types/t1/: a.java  f.java
examples/oomapping_poc/simple/hand/types/t2/: b.java  g.java  h.java
src/: HGom.hs  OOMappings.hs
src/Common/: Checker.hs  Checkers.hs  CodeGen.hs  Config.hs  FileGen.hs  Parser.hs  Pretty.hs  Random.hs  Sig.hs  SymbolTable.hs
src/Common/CodeGen/: Builtins.hs  Constants.hs  GenMonad.hs  Helpers.hs
src/Gom/: Config.hs  FileGen.hs  HGom.hs  SymbolTable.hs
src/Gom/CodeGen/: Abstract.hs  Common.hs  Constructors.hs  Sorts.hs
src/Gom/CodeGen/Common/: GenMonad.hs
src/Gom/Common/: Checker.hs  Sig.hs
src/Gom/HGom/CodeGen/: Strategies.hs
src/Gom/OOMappings/: CodeGen.hs
src/HGom/: Checker.hs  CodeGen.hs  Config.hs  UnitTests.hs
src/HGom/CodeGen/: Abstract.hs  Common.hs  Constructors.hs  HGenMonad.hs  Mappings.hs  Sorts.hs  Strategies.hs
src/OOMappings/: Checker.hs  CodeGen.hs  Config.hs  UnitTests.hs
src/OOMappings/CodeGen/: OGenMonad.hs
test/: Tests.hs  example.gom  simple.gom
test/Gom/: Random.hs  SymbolTableTests.hs
test/bench/: Gen.hs  Makefile
test/coverage/: coverage.sh
test/data/: t1.2.gom  t1.5.gom  t13.gom  t14.gom  t1_1.gom  t1_6.gom  t2.4.gom  t2.gom  t2_1.gom  t2_3.gom  t2_5.gom  t2_9.gom  t3.0.gom  t3.2.gom  t3.5.gom  t3.6.gom  t3.7.gom  t3.8.gom  t3.gom  t3_2.gom  t3_6.gom  t4.1.gom  t4.3.gom  t4.4.gom  t4.7.gom  t4.gom  t6.gom  t7.gom
tests/: big.gom
tests/bench/: Makefile  bench.sh
tests/coverage/: coverage.sh  t10.gom  t11.gom  t5.gom  t7.gom  t8.gom  t9.gom
tests/data/: t1.gom  t12.gom  t9.gom
tests/examples/: big.gom
