name:           hgom
version:        0.4
author:         Paul Brauner and Emilie Balland
maintainer:     Paul Brauner <paul.brauner@inria.fr>
copyright:      (c) Paul Brauner 2009
                (c) Emilie Balland 2009
                (c) INRIA 2009
homepage:       http://www.loria.fr/~brauner
synopsis:       An haskell port of the java version of gom 
description:
  The executable hgom takes a module consisting of several abstract datatypes
  declarations as an input and ouputs java classes. It is meant to mimic the java
  version of Gom: <http://tom.loria.fr/wiki/index.php5/Documentation:Gom>.
category:          Compilers
license:           GPL
license-file:      COPYING
cabal-version:     >= 1.6.0
build-type:        Simple
tested-with:       GHC >= 6.10

data-files: test/data/*.gom
extra-source-files: examples/*.gom
                    test/coverage/coverage.sh
                    test/bench/bench.sh 
                    test/bench/Gen.hs
                    test/bench/Makefile
                    README.markdown

executable hgom
  main-is:       Gom.hs
  other-modules: Gom.Config,
                 Gom.Parser,
                 Gom.Checker,
                 Gom.Pretty,
                 Gom.FileGen,
                 Gom.CodeGen,
                 Gom.OOMappingGen,
                 Gom.CodeGen.Common,
                 Gom.CodeGen.Common.Constants,
                 Gom.CodeGen.Common.Builtins,
                 Gom.CodeGen.Common.Helpers,
                 Gom.CodeGen.Common.GenMonad,
                 Gom.CodeGen.Abstract,
                 Gom.CodeGen.Constructors,
                 Gom.CodeGen.Mappings,
                 Gom.CodeGen.Strategies,
                 Gom.CodeGen.Sorts,
                 Gom.SymbolTable,
                 Gom.Sig,
                 Gom.UnitTests,
                 Paths_hgom
  build-depends: base >= 4 && < 5, containers >= 0.2,
                 parsec >= 3.0.0, wl-pprint >= 1.0,
                 mtl >= 1.1.0.2, directory >= 1.0.0.2,
                 filepath >= 1.1.0.2, QuickCheck >= 2,
                 test-framework >= 0.2.4, 
                 test-framework-quickcheck2 >= 0.2.5,
                 test-framework-hunit >= 0.2.4,
                 HUnit >= 1.2.2.1, unix >= 2.3.0.0,
                 process >= 1.0.1.1
  extensions:    
  ghc-options:   -Wall -fno-warn-orphans
