name:           hgom
version:        0.6
author:         Paul Brauner and Emilie Balland
maintainer:     Paul Brauner <paul.brauner@inria.fr>
copyright:      (c) Paul Brauner 2009
                (c) Emilie Balland 2009
                (c) INRIA 2009
homepage:       http://github.com/polux/hgom
synopsis:       An haskell port of the java version of gom 
description:
  The executable hgom takes a module consisting of several abstract datatypes
  declarations as an input and ouputs java classes. It is meant to mimic the java
  version of Gom: <http://tom.loria.fr/wiki/index.php5/Documentation:Gom>.
category:          Compiler
license:           GPL
license-file:      COPYING
cabal-version:     >= 1.8
build-type:        Simple
tested-with:       GHC >= 6.10

extra-source-files: examples/*.gom
                    test/coverage/coverage.sh
                    test/bench/bench.sh 
                    test/bench/Gen.hs
                    test/bench/Makefile
                    README.markdown
                    CHANGELOG.markdown

data-files: test/data/*.gom
            test/data/*.jar

Flag test
  Description: enable test support
  Default:     False

executable hgom
  hs-source-dirs: src
  main-is:       HGom.hs
  other-modules: Common.Config
                 Common.FileGen
                 Common.Parser
                 Common.Checkers
                 Common.Pretty
                 Common.CodeGen
                 Common.CodeGen.Builtins
                 Common.CodeGen.Helpers
                 Common.CodeGen.Constants
                 Common.CodeGen.GenMonad
                 Common.Random
                 Common.SymbolTable
                 Common.Sig
                 HGom.Config
                 HGom.Checker
                 HGom.CodeGen
                 HGom.CodeGen.HGenMonad
                 HGom.CodeGen.Abstract
                 HGom.CodeGen.Constructors
                 HGom.CodeGen.Mappings
                 HGom.CodeGen.Strategies
                 HGom.CodeGen.Sorts
                 Paths_hgom
  build-depends: base >= 4 && < 5, containers >= 0.2,
                 parsec >= 3.0.0, wl-pprint >= 1.0,
                 transformers >= 0.2.2.0, directory >= 1.0.0.2,
                 filepath >= 1.1.0.2, mtl
  extensions:    CPP
  ghc-options:   -Wall -fno-warn-orphans

  if flag(test)
    cpp-options:   -DTEST
    build-depends: QuickCheck >= 2, test-framework >= 0.2.4, 
                   test-framework-quickcheck2 >= 0.2.5,
                   test-framework-hunit >= 0.2.4, Glob >= 0.5,
                   HUnit >= 1.2.2.1, process >= 1.0.1.1, mtl
                   
    other-modules: HGom.UnitTests

executable oomappings
  hs-source-dirs: src
  main-is:       OOMappings.hs
  other-modules: Common.Config
                 Common.FileGen
                 Common.Parser
                 Common.Checkers
                 Common.Pretty
                 Common.CodeGen
                 Common.CodeGen.Builtins
                 Common.CodeGen.Helpers
                 Common.CodeGen.Constants
                 Common.CodeGen.GenMonad
                 Common.Random
                 Common.SymbolTable
                 Common.Sig
                 OOMappings.Config
                 OOMappings.Checker
                 OOMappings.CodeGen
                 OOMappings.CodeGen.OGenMonad
                 Paths_hgom
  build-depends: base >= 4 && < 5, containers >= 0.2,
                 parsec >= 3.0.0, wl-pprint >= 1.0,
                 transformers >= 0.2.2.0, directory >= 1.0.0.2,
                 filepath >= 1.1.0.2, mtl
  extensions:    CPP
  ghc-options:   -Wall -fno-warn-orphans

  if flag(test)
    cpp-options:   -DTEST
    build-depends: QuickCheck >= 2, test-framework >= 0.2.4, 
                   test-framework-quickcheck2 >= 0.2.5,
                   test-framework-hunit >= 0.2.4, Glob >= 0.5,
                   HUnit >= 1.2.2.1, process >= 1.0.1.1, mtl
                   
    other-modules: OOMappings.UnitTests

