name:           hgom
version:        0.7
author:         Paul Brauner and Emilie Balland
maintainer:     Paul Brauner <paul.brauner@inria.fr>
copyright:      (c) Paul Brauner 2009
                (c) Emilie Balland 2009
                (c) INRIA 2009
homepage:       http://github.com/polux/hgom
synopsis:       An haskell port of the java version of gom 
description:
  The executable hgom takes a module consisting of several abstract datatypes
  declarations as an input and ouputs java classes. It is meant to mimic the java
  version of Gom: <http://tom.loria.fr/wiki/index.php5/Documentation:Gom>.
category:          Compiler
license:           GPL
license-file:      COPYING
cabal-version:     >= 1.10
build-type:        Simple
tested-with:       GHC >= 6.10 && <= 7.4.2

extra-source-files: examples/*.gom
                    bench/bench.sh 
                    bench/Gen.hs
                    bench/Makefile
                    README.markdown
                    CHANGELOG.markdown
                    test/data/*.gom
                    test/data/*.jar

library
  hs-source-dirs:      src
  exposed-modules:     Gom.Config
                       Gom.Parser
                       Gom.Checker
                       Gom.Pretty
                       Gom.FileGen
                       Gom.CodeGen
                       Gom.OOMappingGen
                       Gom.CodeGen.Common
                       Gom.CodeGen.Common.Constants
                       Gom.CodeGen.Common.Builtins
                       Gom.CodeGen.Common.Helpers
                       Gom.CodeGen.Common.GenMonad
                       Gom.CodeGen.Abstract
                       Gom.CodeGen.Constructors
                       Gom.CodeGen.Mappings
                       Gom.CodeGen.Strategies
                       Gom.CodeGen.Sorts
                       Gom.SymbolTable
                       Gom.Sig
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       parsec,
                       wl-pprint,
                       mtl,
                       directory,
                       filepath
  default-language:    Haskell2010
  ghc-options: -Wall
               -fno-warn-orphans 
               -O2

executable hgom
  hs-source-dirs:      app
  main-is:       Gom.hs
  build-depends: base >= 4.7 && < 5,
                 wl-pprint,
                 hgom               
  ghc-options: -Wall
               -fno-warn-orphans
               -O2
  default-language:    Haskell2010

test-suite hgom-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  other-modules:       Gom.Random
                       Gom.SymbolTableTests
                       Paths_hgom
  build-depends:       base,
                       hgom,
                       test-framework,
                       QuickCheck,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       Glob,
                       HUnit,
                       process,
                       directory,
                       filepath
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2 
  default-language:    Haskell2010

